plugins {
    id 'org.springframework.boot' version '2.5.0'
    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
    id 'java'
}

group = 'com.vision'
version = '1.0-SNAPSHOT'
sourceCompatibility = 11
targetCompatibility = 11

test {
    useJUnitPlatform()
}
repositories {
    mavenCentral()
}

dependencies {
    implementation('org.springframework.boot:spring-boot-starter-web')
    implementation("org.springframework.boot:spring-boot-starter-security")
    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.0.2.RELEASE'
    implementation group: 'org.springframework', name: 'spring-messaging'
    implementation group: 'org.springframework', name: 'spring-websocket'
    implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
    implementation group: 'org.springframework.security', name: 'spring-security-jwt'
    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.6.0'
    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5'
    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
    implementation group: 'com.google.guava', name: 'guava', version: '11.0.2'
    implementation  group: 'commons-io', name: 'commons-io', version: '2.6'
    implementation ('javax.xml.bind:jaxb-api:2.3.1')
    implementation ('javax.activation:activation:1.1.1')
    implementation ('org.glassfish.jaxb:jaxb-runtime:3.0.1')
    implementation  group: 'mysql', name: 'mysql-connector-java'
    implementation group: 'org.hsqldb', name: 'hsqldb', version: '2.4.1'
    implementation group: 'com.h2database', name: 'h2', version: '1.4.192'
    implementation group: 'org.apache.derby', name: 'derby', version: '10.14.2.0'


    testImplementation('org.springframework.boot:spring-boot-starter-test')
    testImplementation group: 'org.springframework.security', name: 'spring-security-test'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.2'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.2'
}